--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,15 @@
 {
+    "type": "project",
+    "license": "BSD",
+    "autoload": {
+        "psr-4": {
+            "Application\\": "application/",
+            "DataBase\\": "bd/"
+        }
+    },
+    "minimum-stability": "dev",
     "require": {
+        "php": ">=8.3",
         "monolog/monolog": "^3.9"
     }
 }
